<resources>
    <string name="app_name">Sallenet Registration</string>
    <string name="register">register</string>
    <string name="instructions">Thank you for registering.\n You will get an email at:</string>
    <string name="need"><u>Need Help?</u></string>
    <string name="confirmation">password confirmation…</string>
    <string name="password">password…</string>
    <string name="email">email…</string>
    <string name="url">https://lasallefp.com/contactar</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="need_help">Need Help?</string>
    <string name="finish">Finish</string>
    <string name="logo_description_content_description">Sallenet logo</string>
    <string name="check_mark_logo_content_description">Check mark logo</string>
</resources>